<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_cuenta"
            android:icon="@drawable/person_book"
            android:title="@string/menu_cuenta" />
        <item
            android:id="@+id/nav_notas"
            android:icon="@drawable/note_stack"
            android:title="@string/menu_notas" />
        <item
            android:id="@+id/nav_familia"
            android:icon="@drawable/family_restroom"
            android:title="@string/menu_familia" />
        <item
            android:id="@+id/nav_contactos"
            android:icon="@drawable/contacts"
            android:title="@string/menu_contactos" />
        <item
            android:id="@+id/nav_conf_notificaciones"
            android:icon="@drawable/edit_notifications"
            android:title="@string/menu_notificaciones" />
        <item
            android:id="@+id/nav_med_usados"
            android:icon="@drawable/medication"
            android:title="@string/menu_med_usados" />
    </group>
</menu>